Добавил игру Средневековое Подземелье243

--- a/index.html
+++ b/index.html
@@ -294,6 +294,8 @@
             }
         }
 
+        window.startGame = startGame;  // Make startGame available globally
+
         function buyWeapon(type, power, cost) {
             if (gold >= cost) {
                 weaponPower = power;
