--- a/index.html
+++ b/index.html
@@ -463,6 +463,11 @@
             document.getElementById('shopGold').textContent = gold;
         }
 
+        function drawShop() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            // Тут вы можете добавить отрисовку магазина, если нужно
+        }
+
         function changeScreen(screen) {
             currentScreen = screen;
             document.getElementById('shopMenu').style.display = 'none';
