--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         const monsterImage = new Image();
         monsterImage.src = 'mob.png';
         const mapImage = new Image();
-        mapImage.src = 'карта.png';
+        mapImage.src = 'map.png';
         const starImage = new Image();
         starImage.src = 'star.png';
 
