--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             width: 909px;
             height: 885px;
             background: url('crosshair.png') no-repeat center;
+            background-size: 100px 100px; /* Изображение будет размером 100x100 пикселей */
             pointer-events: none;
             transform: translate(-50%, -50%);
             transition: transform 0.1s ease-in-out;
