--- a/index.html
+++ b/index.html
@@ -174,6 +174,25 @@
             color: white;
             font-size: 12px;
         }
+        #continuePrompt {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 20px;
+            border-radius: 5px;
+            text-align: center;
+            display: none;
+        }
+        #continuePrompt button {
+            margin: 5px;
+            padding: 10px;
+            background: #fff;
+            border: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -181,7 +200,7 @@
         <h2>Введите свой никнейм</h2>
         <input type="text" id="nicknameInput" placeholder="Ваш никнейм">
         <button onclick="startGame()">Начать игру</button>
-        <div id="gameVersion">Версия игры: 1.2</div>
+        <div id="gameVersion">Версия игры: 1.1</div>
     </div>
     <canvas id="gameCanvas" style="display:none;"></canvas>
     <div id="bottomMenu" style="display:none;">
@@ -218,17 +237,17 @@
             <div class="shop-item" onclick="showItemDetail('crossbow.png', 'Арбалет (+12 сила)', 60)">
                 <img src="crossbow_thumb.png" alt="Арбалет">
                 <p>Арбалет</p>
-                <p>60 золота</p>
+                <p>60 золота</п>
             </div>
             <div class="shop-item" onclick="showItemDetail('armor.png', 'Броня (+15 защита)', 70)">
                 <img src="armor_thumb.png" alt="Броня">
                 <p>Броня</p>
-                <p>70 золота</p>
+                <п>70 золота</п>
             </div>
             <div class="shop-item" onclick="showItemDetail('helmet.png', 'Шлем (+5 защита)', 30)">
                 <img src="helmet_thumb.png" alt="Шлем">
-                <p>Шлем</p>
-                <p>30 золота</p>
+                <п>Шлем</п>
+                <п>30 золота</п>
             </div>
         </div>
         <button onclick="continueGame()">Продолжить</button>
@@ -240,18 +259,24 @@
         <div class="health-bar">
             <div class="health-bar-inner" id="playerHealthBar"></div>
         </div>
-        <p>Золото: <span id="statusGold"></span></p>
-        <p>Уровень: <span id="statusLevel"></span></p>
+        <п>Золото: <span id="statusGold"></span></п>
+        <п>Уровень: <span id="statusLevel"></span></п>
     </div>
     <div class="victory-message" id="victoryMessage">
-        <p>Shap в печали, что вы его бьете :(</p>
+        <п>Shap в печали, что вы его бьете :(</п>
     </div>
     <div class="crosshair" id="crosshair"></div>
     <div id="itemDetail">
         <img id="itemDetailImage" src="" alt="Item Detail">
-        <p id="itemDetailName"></p>
+        <п id="itemDetailName"></п>
         <button onclick="buyItem()">Купить</button>
         <button onclick="closeItemDetail()">Закрыть</button>
+    </div>
+    <div id="continuePrompt">
+        <п>Shap в печали, что вы его бьете :(</п>
+        <п>Вы хотите продолжить унижать Shap и убить следующего монстра?</п>
+        <button onclick="continueToNextLevel()">Да</button>
+        <button onclick="goToCastle()">Нет</button>
     </div>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
@@ -522,25 +547,45 @@
                         weaponLevel
                     });
                     showVictoryMessage();
-                    currentScreen = 'shop';
-                    crosshair.style.display = 'none';
                     setTimeout(() => {
                         document.getElementById('victoryMessage').style.display = 'none';
-                        document.getElementById('shopMenu').style.display = 'block';
-                        updateShop();
-                        if (currentLevel < levels.length) {
-                            currentLevel++;
-                            drawLevelMap();
-                        } else {
-                            currentScreen = 'victory';
-                            drawVictoryScreen();
-                        }
+                        showContinuePrompt();
                     }, 2000);
                 }
             }
         }
 
         window.hitMonster = hitMonster;
+
+        function showContinuePrompt() {
+            document.getElementById('continuePrompt').style.display = 'block';
+        }
+
+        function hideContinuePrompt() {
+            document.getElementById('continuePrompt').style.display = 'none';
+        }
+
+        function continueToNextLevel() {
+            hideContinuePrompt();
+            if (currentLevel < 100) {
+                currentLevel++;
+                startLevel(currentLevel);
+            } else {
+                currentScreen = 'victory';
+                drawVictoryScreen();
+            }
+            updateTopPlayers(nickname, { nickname, level: currentLevel });
+            drawLevelMap();
+        }
+
+        window.continueToNextLevel = continueToNextLevel;
+
+        function goToCastle() {
+            hideContinuePrompt();
+            changeScreen('castle');
+        }
+
+        window.goToCastle = goToCastle;
 
         function drawMenu() {
             ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
@@ -676,7 +721,7 @@
                     for (const key in topPlayers) {
                         if (topPlayers.hasOwnProperty(key)) {
                             const player = topPlayers[key];
-                            topListHTML += `<p>${player.nickname} - Уровень ${player.level}</p>`;
+                            topListHTML += `<п>${player.nickname} - Уровень ${player.level}</п>`;
                         }
                     }
                     document.getElementById('topPlayersMenu').innerHTML = topListHTML;
