--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             display: none;
         }
         #characterImage {
-            width: 100px;
-            height: 100px;
+            width: 350px;
+            height: 590px;
         }
         #nicknameMenu {
             display: block;
@@ -193,6 +193,28 @@
             border: none;
             cursor: pointer;
         }
+        .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: #fff;
+            border: none;
+            padding: 5px;
+            cursor: pointer;
+        }
+        .monster-message {
+            position: fixed;
+            top: 20%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(255, 0, 0, 0.8);
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+            font-size: 16px;
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -200,7 +222,7 @@
         <h2>Введите свой никнейм</h2>
         <input type="text" id="nicknameInput" placeholder="Ваш никнейм">
         <button onclick="startGame()">Начать игру</button>
-        <div id="gameVersion">Версия игры: 1.1</div>
+        <div id="gameVersion">Версия игры: 1.3</div>
     </div>
     <canvas id="gameCanvas" style="display:none;"></canvas>
     <div id="bottomMenu" style="display:none;">
@@ -208,7 +230,7 @@
         <div onclick="changeScreen('dungeon')">Подземелье</div>
         <div onclick="changeScreen('raid')">Рейд</div>
         <div onclick="changeScreen('castle')">Замок</div>
-        <div onclick="changeScreen('shop')">Магазин</div>
+        <div onclick="toggleShop()">Магазин</div>
         <div onclick="toggleCharacterMenu()">Персонаж</div>
         <div onclick="toggleTopPlayers()">Топ игроки</div>
     </div>
@@ -221,6 +243,7 @@
         <p>Уровень: <span id="level"></span></p>
     </div>
     <div id="shopMenu">
+        <button class="close-btn" onclick="toggleShop()">X</button>
         <h2>Магазин</h2>
         <p>Золото: <span id="shopGold"></span></p>
         <div id="shopItems">
@@ -250,7 +273,6 @@
                 <p>30 золота</p>
             </div>
         </div>
-        <button onclick="continueGame()">Продолжить</button>
     </div>
     <div id="topPlayersMenu">
         <button onclick="toggleTopPlayers()">Закрыть</button>
@@ -268,7 +290,7 @@
     <div class="crosshair" id="crosshair"></div>
     <div id="itemDetail">
         <img id="itemDetailImage" src="" alt="Item Detail">
-        <п id="itemDetailName"></p>
+        <p id="itemDetailName"></p>
         <button onclick="buyItem()">Купить</button>
         <button onclick="closeItemDetail()">Закрыть</button>
     </div>
@@ -278,19 +300,20 @@
         <button onclick="continueToNextLevel()">Да</button>
         <button onclick="goToCastle()">Нет</button>
     </div>
+    <div class="monster-message" id="monsterMessage"></div>
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
         import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-database.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyCPQFqbWCL3XaM-sLYDWgWMdslhS7O7WC8",
-            authDomain: "game-7bdb0.firebaseapp.com",
-            databaseURL: "https://game-7bdb0-default-rtdb.firebaseio.com",
-            projectId: "game-7bdb0",
-            storageBucket: "game-7bdb0.appspot.com",
-            messagingSenderId: "327382187542",
-            appId: "1:327382187542:web:cc82e8673791983404bf37",
-            measurementId: "G-8JBZ9PEV84"
+            apiKey: "YOUR_API_KEY",
+            authDomain: "YOUR_AUTH_DOMAIN",
+            databaseURL: "YOUR_DATABASE_URL",
+            projectId: "YOUR_PROJECT_ID",
+            storageBucket: "YOUR_STORAGE_BUCKET",
+            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+            appId: "YOUR_APP_ID",
+            measurementId: "YOUR_MEASUREMENT_ID"
         };
 
         const app = initializeApp(firebaseConfig);
@@ -340,6 +363,7 @@
         let weaponName = 'Кулаки';
         let weaponLevel = 0;
         let selectedItem = {};
+        const monsterMessages = ["Не бейте меня", "За что мне это все ?? ", "я не буду больше читерить"];
 
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
@@ -382,9 +406,20 @@
         function showHitAnimation() {
             crosshair.style.transition = 'transform 0.1s ease-in-out';
             crosshair.style.transform = 'translate(-50%, -50%) scale(0.8)';
+            showMonsterMessage();
             setTimeout(() => {
                 crosshair.style.transform = 'translate(-50%, -50%) scale(1)';
             }, 100);
+        }
+
+        function showMonsterMessage() {
+            const message = monsterMessages[Math.floor(Math.random() * monsterMessages.length)];
+            const monsterMessage = document.getElementById('monsterMessage');
+            monsterMessage.textContent = message;
+            monsterMessage.style.display = 'block';
+            setTimeout(() => {
+                monsterMessage.style.display = 'none';
+            }, 500);
         }
 
         function drawStars(x, y, count) {
@@ -393,8 +428,13 @@
             }
         }
 
+        function toggleShop() {
+            const shopMenu = document.getElementById('shopMenu');
+            shopMenu.style.display = shopMenu.style.display === 'block' ? 'none' : 'block';
+            updateShop();
+        }
+
         function drawShop() {
-            document.getElementById('shopMenu').style.display = 'block';
             document.getElementById('shopGold').textContent = gold;
         }
 
