--- a/index.html
+++ b/index.html
@@ -306,14 +306,14 @@
         import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-database.js";
 
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            databaseURL: "YOUR_DATABASE_URL",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
+            apiKey: "AIzaSyCPQFqbWCL3XaM-sLYDWgWMdslhS7O7WC8",
+            authDomain: "game-7bdb0.firebaseapp.com",
+            databaseURL: "https://game-7bdb0-default-rtdb.firebaseio.com",
+            projectId: "game-7bdb0",
+            storageBucket: "game-7bdb0.appspot.com",
+            messagingSenderId: "327382187542",
+            appId: "1:327382187542:web:cc82e8673791983404bf37",
+            measurementId: "G-8JBZ9PEV84"
         };
 
         const app = initializeApp(firebaseConfig);
@@ -363,7 +363,7 @@
         let weaponName = 'Кулаки';
         let weaponLevel = 0;
         let selectedItem = {};
-        const monsterMessages = ["Не бейте меня", "За что мне это все ?? ", "я не буду больше читерить"];
+        const monsterMessages = ["Не бейте меня", "ай", "больно блин"];
 
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
