--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
         #characterMenu {
             position: fixed;
-            top: 10px;
+            top: 100px;
             right: 10px;
             background: rgba(0, 0, 0, 0.8);
             color: white;
@@ -363,7 +363,7 @@
         let weaponName = 'Кулаки';
         let weaponLevel = 0;
         let selectedItem = {};
-        const monsterMessages = ["Не бейте меня", "ай", "больно блин"];
+        const monsterMessages = ["Не бейте меня", "За что мне это все ?? ", "я не буду больше читерить", "простите я просто сплю с админами :( )";
 
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
