--- a/index.html
+++ b/index.html
@@ -433,7 +433,10 @@
             shopMenu.style.display = shopMenu.style.display === 'block' ? 'none' : 'block';
             updateShop();
         }
-
+        window.toggleShop = toggleShop; // Добавляем в глобальную область видимости
+        function updateShop() {
+    document.getElementById('shopGold').textContent = gold;
+}
         function drawShop() {
             document.getElementById('shopGold').textContent = gold;
         }
