--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@
         let weaponName = 'Кулаки';
         let weaponLevel = 0;
         let selectedItem = {};
-        const monsterMessages = ["Не бейте меня", "За что мне это все ?? ", "я не буду больше читерить", "простите я просто сплю с админами :( )";
+        const monsterMessages = ["Не бейте меня", "За что мне это все ?? ", "я не буду больше читерить", "простите я просто сплю с админами :( )"];
+        
 
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
