--- a/index.html
+++ b/index.html
@@ -38,17 +38,21 @@
             font-size: 18px;
         }
         #characterMenu {
-            position: fixed;
-            top: 100px;
-            right: 10px;
-            background: rgba(0, 0, 0, 0.8);
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            display: none;
-            font-size: 16px;
-            text-align: center;
-        }
+    position: fixed;
+    top: 100px;
+    right: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    display: none;
+    font-size: 16px;
+    text-align: center;
+    max-width: calc(100vw - 20px); /* Ограничение максимальной ширины */
+    max-height: calc(100vh - 120px); /* Ограничение максимальной высоты */
+    overflow: auto; /* Добавление прокрутки, если содержимое превышает максимальный размер */
+}
+
         #shopMenu {
             position: fixed;
             top: 50px;
