--- a/index — копия (2).html
+++ b/index — копия (2).html
@@ -258,33 +258,57 @@
             </div>
             <div class="shop-item" onclick="showItemDetail('bow.png', 'Лук (+8 сила)', 40)">
                 <img src="bow_thumb.png" alt="Лук">
-                <p>Лук</п>
-                <p>40 золота</п>
+                <p>Лук</p>
+                <p>40 золота</p>
             </div>
             <div class="shop-item" onclick="showItemDetail('crossbow.png', 'Арбалет (+12 сила)', 60)">
                 <img src="crossbow_thumb.png" alt="Арбалет">
-                <п>Арбалет</п>
-                <п>60 золота</п>
+                <p>Арбалет</p>
+                <p>60 золота</p>
             </div>
             <div class="shop-item" onclick="showItemDetail('armor.png', 'Броня (+15 защита)', 70)">
                 <img src="armor_thumb.png" alt="Броня">
-                <п>Броня</п>
-                <п>70 золота</п>
+                <p>Броня</p>
+                <p>70 золота</p>
             </div>
             <div class="shop-item" onclick="showItemDetail('helmet.png', 'Шлем (+5 защита)', 30)">
                 <img src="helmet_thumb.png" alt="Шлем">
-                <п>Шлем</п>
-                <п>30 золота</п>
+                <p>Шлем</p>
+                <p>30 золота</p>
             </div>
         </div>
     </div>
+    <div id="topPlayersMenu">
+        <button onclick="toggleTopPlayers()">Закрыть</button>
+    </div>
+    <div class="status-bar" id="statusBar" style="display:none;">
+        <div class="health-bar">
+            <div class="health-bar-inner" id="playerHealthBar"></div>
+        </div>
+        <p>Золото: <span id="statusGold"></span></p>
+        <p>Уровень: <span id="statusLevel"></span></p>
+    </div>
+    <div class="victory-message" id="victoryMessage">
+        <p>Shap в печали, что вы его бьете :(</p>
+    </div>
+    <div class="crosshair" id="crosshair"></div>
     <div id="itemDetail">
         <img id="itemDetailImage" src="" alt="Item Detail">
-        <п id="itemDetailName"></п>
+        <p id="itemDetailName"></p>
         <button onclick="buyItem()">Купить</button>
         <button onclick="closeItemDetail()">Закрыть</button>
     </div>
-    <script>
+    <div id="continuePrompt">
+        <p>Shap в печали, что вы его бьете :(</p>
+        <p>Вы хотите продолжить унижать Shap и убить следующего монстра?</p>
+        <button onclick="continueToNextLevel()">Да</button>
+        <button onclick="goToCastle()">Нет</button>
+    </div>
+    <div class="monster-message" id="monsterMessage"></div>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
+        import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-database.js";
+
         const firebaseConfig = {
             apiKey: "AIzaSyCPQFqbWCL3XaM-sLYDWgWMdslhS7O7WC8",
             authDomain: "game-7bdb0.firebaseapp.com",
@@ -299,6 +323,76 @@
         const app = initializeApp(firebaseConfig);
         const database = getDatabase(app);
 
+        function saveProgress(nickname, playerData) {
+            set(ref(database, 'players/' + nickname), playerData);
+        }
+
+        function loadProgress(nickname) {
+            const dbRef = ref(database);
+            return get(child(dbRef, `players/${nickname}`)).then((snapshot) => {
+                if (snapshot.exists()) {
+                    return snapshot.val();
+                } else {
+                    console.log("No data available");
+                    return null;
+                }
+            }).catch((error) => {
+                console.error(error);
+            });
+        }
+        function showItemDetail(imageSrc, itemName, itemPrice) {
+    // Найти элемент для отображения большого изображения
+    const itemDetailImage = document.getElementById('itemDetailImage');
+    // Установить источник изображения
+    itemDetailImage.src = imageSrc;
+    // Обновить описание предмета
+    const itemDetailName = document.getElementById('itemDetailName');
+    itemDetailName.textContent = `${itemName} - ${itemPrice} золота`;
+    // Показать детальное отображение предмета
+    document.getElementById('itemDetail').style.display = 'block';
+}
+
+
+        function closeItemDetail() {
+            document.getElementById('itemDetail').style.display = 'none';
+        }
+
+        function buyItem() {
+    if (gold >= selectedItem.cost) {
+        gold -= selectedItem.cost;
+        updateCharacterMenu();
+        updateShop();
+        saveProgress(nickname, {
+            currentLevel,
+            gold,
+            playerHealth,
+            weaponPower,
+            weaponName,
+            weaponLevel
+        });
+        closeItemDetail();
+    } else {
+        alert('Недостаточно золота');
+    }
+}
+        function updateTopPlayers(nickname, playerData) {
+            set(ref(database, 'topPlayers/' + nickname), playerData);
+        }
+
+        function displayTopPlayers() {
+            const dbRef = ref(database);
+            return get(child(dbRef, 'topPlayers')).then((snapshot) => {
+                if (snapshot.exists()) {
+                    return snapshot.val();
+                } else {
+                    console.log("No data available");
+                    return {};
+                }
+            }).catch((error) => {
+                console.error(error);
+            });
+        }
+
         let nickname = '';
         let currentLevel = 1;
         let gold = 0;
@@ -309,6 +403,7 @@
         let selectedItem = {};
         const monsterMessages = ["Не бейте меня", "За что мне это все ?? ", "я не буду больше читерить", "простите я просто сплю с админами :( )"];
         
+
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
         canvas.width = window.innerWidth;
@@ -337,7 +432,8 @@
         starImage.onload = function() {
             drawLevelMap();
         };
-
+        
+        // Crosshair logic
         const crosshair = document.getElementById('crosshair');
         document.addEventListener('mousemove', (event) => {
             if (currentScreen === 'battle') {
@@ -345,74 +441,6 @@
                 crosshair.style.top = `${event.clientY}px`;
             }
         });
-
-        function showItemDetail(imageSrc, itemName, itemPrice) {
-            console.log(`showItemDetail called with: ${imageSrc}, ${itemName}, ${itemPrice}`);
-            const itemDetailImage = document.getElementById('itemDetailImage');
-            itemDetailImage.src = imageSrc;
-            const itemDetailName = document.getElementById('itemDetailName');
-            itemDetailName.textContent = `${itemName} - ${itemPrice} золота`;
-            document.getElementById('itemDetail').style.display = 'block';
-        }
-
-        function closeItemDetail() {
-            document.getElementById('itemDetail').style.display = 'none';
-        }
-
-        function buyItem() {
-            if (gold >= selectedItem.cost) {
-                gold -= selectedItem.cost;
-                updateCharacterMenu();
-                updateShop();
-                saveProgress(nickname, {
-                    currentLevel,
-                    gold,
-                    playerHealth,
-                    weaponPower,
-                    weaponName,
-                    weaponLevel
-                });
-                closeItemDetail();
-            } else {
-                alert('Недостаточно золота');
-            }
-        }
-
-        function saveProgress(nickname, playerData) {
-            set(ref(database, 'players/' + nickname), playerData);
-        }
-
-        function loadProgress(nickname) {
-            const dbRef = ref(database);
-            return get(child(dbRef, `players/${nickname}`)).then((snapshot) => {
-                if (snapshot.exists()) {
-                    return snapshot.val();
-                } else {
-                    console.log("No data available");
-                    return null;
-                }
-            }).catch((error) => {
-                console.error(error);
-            });
-        }
-
-        function updateTopPlayers(nickname, playerData) {
-            set(ref(database, 'topPlayers/' + nickname), playerData);
-        }
-
-        function displayTopPlayers() {
-            const dbRef = ref(database);
-            return get(child(dbRef, 'topPlayers')).then((snapshot) => {
-                if (snapshot.exists()) {
-                    return snapshot.val();
-                } else {
-                    console.log("No data available");
-                    return {};
-                }
-            }).catch((error) => {
-                console.error(error);
-            });
-        }
 
         function showHitAnimation() {
             crosshair.style.transition = 'transform 0.1s ease-in-out';
@@ -444,11 +472,14 @@
             shopMenu.style.display = shopMenu.style.display === 'block' ? 'none' : 'block';
             updateShop();
         }
-        window.toggleShop = toggleShop; 
+        window.toggleShop = toggleShop; // Добавляем в глобальную область видимости
 
         function drawShop() {
             document.getElementById('shopGold').textContent = gold;
         }
+
+
+
 
         function startGame() {
             const input = document.getElementById('nicknameInput').value;
